--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,8 @@
 Next
   - Fixed glitch of DBCS character at the end of a line (maron2000)
-  - Removed two duplicate Chinese character mappings from code page
-    950 and 226 duplicate Chinese character mappings from code page
-    951. This ensures that users can obtain more accurate Big5 and
-    Big5-UAO character mappings when typing with a Chinese IME. (1abcd)
+  - Removed two and 226 duplicate Chinese character mappings from code
+    pages 950 and 951, respectively, ensuring more accurate Big5 and
+    Big5-UAO character mappings for Chinese IME users. (1abcd)
   - Enabled changing drives mounted prior to switching to securemode (maron2000)
   - Enabled some messages to be translated in the translation files (maron2000)
   - Fixed fullscreen mode occasionally switched to windowed mode (maron2000)
