--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,7 +25,7 @@ Next
   - Fixed PC-98 INT 1Fh, AH=90h source and destination address (drachen6jp)
   - Fixed unnecessary trailing backslash in path name (maron2000)
   - Fixed SSE MOVSS, MOVHPS, UNPCKLPS, UNPCKHPS, and PSADBW as well as
-    MMX PMULLW instruction implementations (fuel-pcbox)
+    MMX PMULLW, PSUBUSB, and PSUBUSW, instruction implementations (fuel-pcbox)
 
 2025.02.01
   - Added new experimental dosbox.conf option that turns off the
