--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,12 @@
 Next
+  - Fixed INT21h AH=0a cursor position moved by bell due to keyboard buffer full
+    (maron2000)
+  - Fixed INT21h AH=01 echo behavior (maron2000)
+  - Replaced SetPixel with DIB Section Direct Memory Access for faster printing
+    (DwayneSelsig)
+  - Fixed creation of overlay special files (zyebytevt)
   - Fixed Host key (F11, F12) handling in Codepage 932 (Japanese Shift-JIS).
     (maron2000)
-  - Fixed SSE PSADBW to match the Intel SDM. (fuel-pcbox) 
   - Bumped ESFMu to ver 1.2.6 (maron2000)
   - Fixed regression of adding a dot to CD labels when longer than 8 characters,
     required for games such as Descent 2 CD installer (maron2000)
