Add translations to language files (en_US, ja_JP)

--- a/contrib/translations/ja/ja_JP.lng
+++ b/contrib/translations/ja/ja_JP.lng
@@ -4225,3 +4225,59 @@ BIOS イメージを開くことができませんでした。
 :PROGRAM_BIOSTEST_TOO_LARGE
 BIOS ファイルが大きすぎます。
 .
+:PROGRAM_DELTREE_HELP
+ディレクトリとそれ以下のファイル/ディレクトリを全部削除します。
+
+ディレクトリを削除するには:
+DELTREE [/Y] [drive:]path [[drive:]path[...]]
+
+  /Y              ディレクトリの削除の確認を行いません。
+  [drive:]path    削除したいディレクトリの名前を指定します。
+
+注意: DELTREE コマンドは非常に危険なコマンドなので注意して使用して下さい。
+ディレクトリとそれ以下のファイル/ディレクトリが全部削除されてしまいます。
+
+.
+:PROGRAM_TREE_HELP
+ドライブまたはパスのディレクトリ構造を図式表示します。
+
+TREE [drive:][path] [/F] [/A]
+
+  /F   各ディレクトリの中のファイル名を表示します。
+  /A   罫線文字の代わりに ASCII 文字を使います。
+
+.
+:PROGRAM_TITLE_HELP
+DOSBox-X ウィンドウのタイトルを指定します。
+
+TITLE [文字列]
+
+  文字列       DOSBox-X ウィンドウのタイトルを指定します。
+
+.
+:PROGRAM_COLOR_HELP
+コンソールの規定の前景色と背景色を設定します。
+
+COLOR [属性]
+
+  属性        コンソール出力の色属性を指定します。
+  
+色属性は、2 桁の 16 進数で指定します。
+1 桁目は背景に、2 桁目は全景に対応します。
+各桁には、次のいずれかの値を指定することができます:
+
+    0 = 黒          8 = 灰色
+    1 = 青          9 = 明るい青
+    2 = 緑          A = 明るい緑
+    3 = 水色        B = 明るい水色
+    4 = 赤          C = 明るい赤
+    5 = 紫          D = 明るい紫
+    6 = 黄色        E = 明るい黄色
+    7 = 白          F = 輝く白
+
+引数を指定しないでこのコマンドを実行すると規定の色を復元します。
+前景と背景に同じ色を指定すると、COLOR コマンドは ERRORLEVEL を 1 に指定します。
+
+例: "COLOR fc" は輝く白の上に明るい赤を表示します。
+
+.
