--- a/contrib/translations/fr/fr_FR.lng
+++ b/contrib/translations/fr/fr_FR.lng
@@ -4201,7 +4201,6 @@ Doit être + ou - pour MONO : %s
 .
 :PROGRAM_SETCOLOR_COLOR
 Couleur %d : (%d,%d,%d) ou #%02x%02x%02x
-
 .
 :PROGRAM_SETCOLOR_INVALID_NUMBER
 Numéro de couleur invalide - %s
@@ -4231,61 +4230,66 @@ Impossible d'ouvrir un fichier
 Le ficher BIOS est trop gros
 .
 :PROGRAM_DELTREE_HELP
-Deletes a directory and all the subdirectories and files in it.
+Efface un répertoire et tous les sous-répertoires et fichiers
+à l'intérieur.
 
-To delete one or more files and directories:
+Pour supprimer un ou plusieurs fichiers et répertoires :
 DELTREE [/Y] [drive:]path [[drive:]path[...]]
 
-  /Y              Suppresses prompting to confirm you want to delete
-                  the subdirectory.
-  [drive:]path    Specifies the name of the directory you want to delete.
+  /Y              Supprime la demande de confirmation de la suppression 
+                  du sous-répertoire
+  [drive:]path    Indique le nom du répertoire à supprimer.
 
-Note: Use DELTREE cautiously. Every file and subdirectory within the
-specified directory will be deleted.
+Note : utilisez DELTREE avec précaution. Tous les fichiers et sous-répertoires 
+du répertoire spécifié sur seront supprimés.
 
 .
 :PROGRAM_TREE_HELP
-Graphically displays the directory structure of a drive or path.
+Affiche graphiquement la structure des répertoires d'un lecteur 
+ou d'un chemin d'accès.
 
 TREE [drive:][path] [/F] [/A]
 
-  /F   Displays the names of the files in each directory.
-  /A   Uses ASCII instead of extended characters.
+  /F   Affiche les noms des fichiers dans chaque répertoire.
+  /A   Utilise l'ASCII au lieu des caractères étendus.
 
 .
 :PROGRAM_TITLE_HELP
-Sets the window title for the DOSBox-X window.
+Définit le titre de la fenêtre DOSBox-X.
 
 TITLE [string]
 
-  string       Specifies the title for the DOSBox-X window.
+  string       Spécifie le titre de la fenêtre DOSBox-X.
 
 .
 :PROGRAM_COLOR_HELP
-Sets the default console foreground and background colors.
+Définit les couleurs d'avant-plan et d'arrière-plan par 
+défaut de la console.
 
 COLOR [attr]
 
-  attr        Specifies color attribute of console output
+  attr        Spécifie l'attribut de couleur de la sortie 
+              de la console
   
-Color attributes are specified by TWO hex digits -- the first
-corresponds to the background; the second to the foreground.
-Each digit can be any of the following values:
+Les attributs de couleur sont spécifiés par DEUX chiffres hexagonaux : 
+le premier correspond à l'arrière-plan et le second à l'avant-plan.
+Chaque chiffre peut prendre l'une des valeurs suivantes :
 
-    0 = Black       8 = Gray
-    1 = Blue        9 = Light Blue
-    2 = Green       A = Light Green
-    3 = Aqua        B = Light Aqua
-    4 = Red         C = Light Red
-    5 = Purple      D = Light Purple
-    6 = Yellow      E = Light Yellow
-    7 = White       F = Bright White
+    0 = Noir        8 = Gris
+    1 = Bleu        9 = Bleu clair
+    2 = Vert        A = Vert clair
+    3 = Aqua        B = Aqua clair
+    4 = Rouge       C = Rouge clair
+    5 = Violet      D = Violet clair
+    6 = Jaune       E = Jaune clair
+    7 = Blanc       F = Blanc brillant
 
-If no argument is given, this command restores the original color.
+Si aucun argument n'est donné, cette commande rétablit la couleur d'origine.
 
-The COLOR command sets ERRORLEVEL to 1 if an attempt is made to execute
-the COLOR command with a foreground and background color that are the same.
+La commande COLOR attribue la valeur 1 à ERRORLEVEL si l'on tente d'exécuter
+la commande COLOR avec une couleur d'avant-plan et une couleur d'arrière-plan 
+identiques.
 
-Example: "COLOR fc" produces light red on bright white.
+Exemple : "COLOR fc" produit un rouge clair sur du blanc brillant.
 
 .
