--- a/contrib/translations/ja/ja_JP.lng
+++ b/contrib/translations/ja/ja_JP.lng
@@ -33,7 +33,7 @@ DOSBox-X 設定ツール
 マッパーファイルを保存
 .
 :WARNING
-注意
+警告
 .
 :YES
 はい
@@ -4280,4 +4280,128 @@ COLOR [属性]
 
 例: "COLOR fc" は輝く白の上に明るい赤を表示します。
 
+.
+:ERROR
+エラー
+.
+:INFORMATION
+情報
+.
+:PROGRAM_SWITCH_LANG
+コードページが %d に変更されました。このコードページに対応する言語ファイル %s を読み込みますか ?
+.
+:PROGRAM_ALREADY_MOUNTED
+%s: ドライブはすでにマウントされています。アンマウントしてから再度試して下さい。
+. 
+:PROGRAM_DRIVE_NO_EXIST
+ドライブ %s: はシステムに存在しません。
+.
+:PROGRAM_DRIVE_WARN
+DOSBox-X から実際の %s ドライブ %s: をアクセスできるようにしてよろしいですか?
+.
+:DRIVE_TYPE_FLOPPY
+フロッピー
+.
+:DRIVE_TYPE_REMOVABLE
+リムーバブル
+.
+:DRIVE_TYPE_NETWORK
+ネットワーク
+.
+:DRIVE_TYPE_HARD
+HDD
+.
+:DRIVE_TYPE_LOCAL
+ローカル
+.
+:DRIVE_TYPE_CDROM
+CD-ROM
+.
+:PROGRAM_CDDRIVE_WARN
+CD ドライブ %s には現在以下のイメージがマウントされています。:
+
+%s
+
+CD イメージを変更しますか?
+.
+:PROGRAM_CDMOUNT_ERROR
+選択された CD イメージをマウントできませんでした。
+.
+:ELTORITO_IMAGE
+El Torito フロッピーイメージ
+.
+:RAM_FLOPPY_IMAGE
+RAM フロッピーイメージ
+.
+:PROGRAM_FLOPPY_WARN
+フロッピードライブ %s には現在以下のイメージがマウントされています。:
+
+%s
+
+フロッピー イメージを変更しますか?
+.
+:PROGRAM_FLOPPYMOUNT_ERROR
+選択された フロッピー イメージをマウントできませんでした。
+.
+:PROGRAM_MOUNT_MORE_IMAGES
+マウントするイメージを追加しますか?
+.
+:PROGRAM_MOUNT_PATH_TOOLONG
+マウントするファイルのパスが長すぎます。
+.
+:PROGRAM_BOOT_FAILED
+%s: ドライブをブートできませんでした。
+.
+:PROGRAM_MOUNT_FAILED
+%s: ドライブをマウントできませんでした。
+.
+:PROGRAM_MOUNT_IMAGE
+%s を %s ドライブにマウントしました。:
+%s %s
+.
+:ARCHIVE
+アーカイブ
+.
+:DISK_IMAGE
+ディスク・イメージ
+.
+:READONLY_MODE
+読み取り専用
+.
+:PROGRAM_MOUNT_SELECT_DRIVE
+ドライブ %s:に %sとしてマウントするドライブ/ディレクトリを選択して下さい。
+.
+:PROGRAM_MOUNT_CDROM_SUPPORT
+ディレクトリを CD-ROM としてマウントする場合、一部制約があります。
+.
+:PROGRAM_MOUNT_NOT_MOUNTED
+%s: ドライブはマウントされていません。
+.
+:PROGRAM_PROGRAM_ALREADY
+別のプログラムが実行中です。
+.
+:PROGRAM_SHELL_ALREADY
+別のシェルが実行中です。
+.
+:PROGRAM_MOUNT_SUCCESS
+ドライブ %s に以下のフォルダをマウントしました。
+%s
+.
+:PROGRAM_WARN_QUICKLAUNCH
+DOSBox-X のクイック起動は C ドライブにマウントします。
+C ドライブはすでにマウントされていますが、続けますか?
+.
+:PROGRAM_NO_EXECUTABLE
+実行ファイルが見つかりません。
+.
+:PROGRAM_EXEC_FINISHED
+プログラムの実行が終了しました。 %s ドライブのマウントを解除しますか?
+.
+:PROGRAM_ASK_CHCP
+%c: ドライブを正常にアクセスするためにはコードページを %d に変更した方が良いかもしれません。
+
+コードページを %d へ変更しますか?
+.
+:PROGRAM_CHANGING_CODEPAGE
+コードページの変更
 .
